--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,36 @@
-fastapi
-uvicorn
-sqlalchemy
-asyncpg
-python-dotenv
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.2.post1
+async-timeout==5.0.0
+asyncpg==0.30.0
+bcrypt==4.2.0
+cffi==1.17.1
+click==8.1.7
+cryptography==43.0.3
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.4
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+jwt==1.3.1
+Mako==1.3.6
+MarkupSafe==3.0.2
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+PyJWT==2.9.0
+python-dotenv==1.0.1
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.2
+typing_extensions==4.12.2
+uvicorn==0.32.0
