--- a/alembic.ini
+++ b/alembic.ini
@@ -1,9 +1,8 @@
 # A generic, single database configuration.
 
-[alembic]
 # path to migration scripts
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = app/migrations
+
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -13,7 +12,11 @@ script_location = app/migrations
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
-prepend_sys_path = . app
+
+[alembic]
+script_location = app/migrations
+sqlalchemy.url = postgresql+asyncpg://postgres:my_password@localhost:5432/my_database
+prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
@@ -61,7 +64,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+
 
 
 [post_write_hooks]
