Поменял структуру базы данных сделал миграцию и поменял Column на mapped структуру моделей

--- a/alembic.ini
+++ b/alembic.ini
@@ -15,8 +15,9 @@
 
 [alembic]
 script_location = app/migrations
-sqlalchemy.url = postgresql+asyncpg://postgres:my_password@localhost:5432/my_database
-prepend_sys_path = .
+
+
+prepend_sys_path = . app
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
@@ -65,6 +66,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 
+
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
