--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.4
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 jwt==1.3.1
 Mako==1.3.6
 MarkupSafe==3.0.2
+packaging==24.2
 passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.22
