--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - .env
     environment:
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=rent
     volumes:
       - postgresdata:/var/lib/postgresql/data
   app:
