--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - POSTGRES_DB=rent
     volumes:
       - postgresdata:/var/lib/postgresql/data
+  redis:
+    image: redis:7
+    container_name: rent_redis
   app:
     build:
       context: .
@@ -20,5 +23,14 @@ services:
     command: sh -c "alembic upgrade head && gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000"
     depends_on:
       - db
+  celery:
+    build: 
+      context: .
+    container_name: rent_celery
+    command: sh -c "celery --app=app.tasks.celery_app:celery worker -l INFO"
+    env_file:
+      - .env
+    depends_on:
+      - redis
 volumes:
   postgresdata:
