--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 alembic==1.14.0
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asyncpg==0.30.0
+billiard==4.2.1
+celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 cryptography==44.0.0
 dnspython==2.7.0
@@ -13,7 +19,9 @@ email_validator==2.2.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
+hiredis==3.1.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
@@ -22,12 +30,15 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jose==1.0.0
 jwt==1.3.1
+kombu==5.4.2
 Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.11
+packaging==24.2
 passlib==1.7.4
+prompt_toolkit==3.0.48
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.1
@@ -35,10 +46,12 @@ pydantic-extra-types==2.10.0
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.17
 PyYAML==6.0.2
+redis==5.2.1
 rich==13.9.4
 rsa==4.9
 shellingham==1.5.4
@@ -48,7 +61,10 @@ SQLAlchemy==2.0.36
 starlette==0.41.3
 typer==0.13.1
 typing_extensions==4.12.2
+tzdata==2024.2
 ujson==5.10.0
 uvicorn==0.32.1
+vine==5.1.0
 watchfiles==0.24.0
+wcwidth==0.2.13
 websockets==14.1
