--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ alembic==1.14.0
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asyncpg==0.30.0
+bcrypt==4.2.1
 billiard==4.2.1
 celery==5.4.0
 certifi==2024.8.30
